@@ -1,3 +1,13 @@
+2018-03-29  Carlos Eduardo Ramalho  <cadubentzen@gmail.com>
+
+        [WPE] Floating point exception in WebEventFactory::createWebWheelEvent
+        https://bugs.webkit.org/show_bug.cgi?id=184037
+
+        Reviewed by Žan Doberšek.
+
+        * Shared/wpe/WebEventFactory.cpp:
+        (WebKit::WebEventFactory::createWebWheelEvent): Use std::copysign() to avoid division by 0.
+
 2018-03-25  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         [GTK] WebKitWebProcessEnumTypes.h missing from webkit-web-extension.h
